<resources>
    <string name="firstName">First Name</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="lastName">Last Name</string>
    <string name="mob_num">Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="first_name_empty">First name cannot be empty.</string>
    <string name="last_name_empty">Last name cannot be empty.</string>
    <string name="mob_num_empty">Mobile number cannot be empty or less than 10 digits.</string>
    <string name="title_activity_find_school">FindSchool</string>
    <string name="enter_school_code">Enter your School Code to find your School</string>
    <string name="enter_code_here">Enter code here</string>
    <string name="search">Search</string>
    <string name="enter">Enter</string>
    <string name="title_activity_select_option">SelectOption</string>
    <string name="classname">Class</string>
    <string name="section">Section</string>
    <string name="enter_otp">Enter the 6 digit OTP sent to the mobile number.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="beta_ver">Beta Version</string>
    <string name="no_internet">Internet not available</string>
    <string name="internet_on">Internet available.</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="purple">Purple</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="pink">Pink</string>
    <string name="cyan">Cyan</string>
    <string name="brown">Brown</string>
    <string name="teal">Teal</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="default_theme">Default</string>
    <string name="select_theme">Select Theme</string>
    <string name="red_theme">Red</string>
    <string name="green_theme">Green</string>
    <string name="purple_theme">Purple</string>
    <string name="blue_theme">Blue</string>
    <string name="yellow_theme">Yellow</string>
    <string name="orange_theme">Orange</string>
    <string name="pink_theme">Pink</string>
    <string name="cyan_theme">Cyan</string>
    <string name="brown_theme">Brown</string>
    <string name="teal_theme">Teal</string>
    <string name="black_theme">Black</string>
    <string name="white_theme">White</string>
    <string name="default_theme_theme">Default</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="setlanguage">Set language</string>
    <string name="language_english">English</string>
    <string name="language_hindi">Hindi</string>
    <string name="language_japanese">Japanese</string>
    <string name="language_french">French</string>
    <string name="language_german">German</string>
    <string name="language_portuguese">Portuguese</string>
    <string name="language_russian">Russian</string>
    <string name="language_mandarin">Mandarin</string>
    <string name="language_cantonese">Cantonese</string>
    <string name="language_spanish">Spanish</string>
    <string name="language_c">Language</string>
    <string name="setlanguage_c">Set language</string>
    <string name="language_english_c">English</string>
    <string name="language_hindi_c">Hindi</string>
    <string name="theme_c">Theme</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_settings">Settings</string>
    <string name="select_language">Select Language</string>
    <string name="selected_theme">Selected Theme</string>
    <string name="selected_language">Selected Language</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="select_class">Select Class</string>
    <string name="select_section">Select Section</string>
    <string name="login_text">Login</string>
    <string name="signup_text">Sign up</string>
    <string name="find_school">Find School</string>
    <string name="home_page">Home</string>
    <string name="title_activity_select_user_type">SelectUserType</string>
    <string name="parent">Parent</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="school_admin">School Admin</string>
    <string name="select_user_type">Select user type</string>
    <string name="title_activity_test">TEst</string>
    <string name="name">Name</string>
    <string name="overall_record">Over all record</string>
    <string name="monthly_record">Monthly record</string>
    <string name="yearly_record">Yearly record</string>
    <string name="academic_performance">Academic performance</string>
    <string name="sports_performance">Sports performance</string>
    <string name="switch_user">Switch user</string>
    <string name="current_user">Current user</string>
    <string name="switch_">Switch</string>
    <string name="add_user">Add</string>
    <string name="title_activity_home_test">HomeTestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="year">Year</string>
    <string name="m_marks">Max Marks</string>
    <string name="result">Result</string>
    <string name="school">School</string>
    <string name="today">Today</string>
    <string name="this_day">This day</string>
    <string name="this_unit_test">This unit test</string>
    <string name="half_yearly">This day</string>
    <string name="yearly">This day</string>
    <string name="want_to_see_more_of">Want to see more of %1$s\'s performance?</string>
    <string name="communicate">Communicate</string>
    <string name="wanna_exit_app">Want to exit the app?</string>
    <string name="enter_enrollment">Enter school enrollment number of student to verify student\'s identity.</string>
    <string name="enter_student_aadhar">Enter student\'s Aadhar number.</string>
    <string name="not_mandatory">Not mandatory</string>
    <string name="enrollment_num">Enrollment number</string>
    <string name="aadhar_num">Aadhar number</string>
    <string name="teacher_pin">Teacher pin</string>
    <string name="school_passphrase">School passphrase</string>
    <string name="enter_your_aadhar">Enter your Aadhar number.</string>
    <string name="enter_details">Enter your details to verify your identity.</string>
    <string name="under_construction">Under construction</string>
    <string name="enter_school">Enter school</string>
    <string name="add_school">Add school</string>
    <string name="share_result">Share result</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="add_photo">Add Photo</string>
    <string name="unable_to_upload">Unable to upload selected file.</string>
    <string name="permission_required">Permission is required.</string>
    <string name="test">Test</string>
    <string name="title_activity_school_details">SchoolDetails</string>
    <string name="select_board">Select Board</string>
    <string name="select_medium">Select Medium</string>
    <string name="school_details">School Details</string>
    <string name="num_of_students">Number of Students</string>
    <string name="create_school">Create School</string>
    <string name="school_area_pincode">School Area Pincode</string>
    <string name="below_num">below %1$s</string>
    <string name="school_assurance">The above information provided by me is accurate.</string>
    <string name="rbse">R.B.S.E</string>
    <string name="cbse">C.B.S.E</string>
    <string name="other">Other</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="approx">approx</string>
    <string name="register_school">Register Your School</string>
    <string name="personal_info">Personal Information</string>
    <string name="school_info">School Info</string>
    <string name="select_image">Select Image</string>
    <string name="gender">Gender</string>
    <string name="marital_status">Marital Status</string>
    <string name="married">Married</string>
    <string name="unmarried">Unmarried</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob">D.O.B.</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="country">Country</string>
    <string name="pin_code">Pin Code</string>
    <string name="area_code">Area Code</string>
    <string name="pan_card_num">Pan Card Number</string>
    <string name="academic_details">Academic Details</string>
    <string name="institute_name">Institute Name</string>
    <string name="academic_status">Academic Status</string>
    <string name="playgroup">PlayGroup</string>
    <string name="primary">Primary</string>
    <string name="middle">Middle</string>
    <string name="secondary">Secondary</string>
    <string name="senior_secondary">Senior Secondary</string>
    <string name="supervisor">Supervisor</string>
    <string name="board">Board</string>
    <string name="location">Location</string>
    <string name="locations">Locations</string>
    <string name="account_details">Account Details</string>
    <string name="role">Role</string>
    <string name="school_email">School Email</string>
    <string name="director">Director</string>
    <string name="manager">Manager</string>
    <string name="principal">Principal</string>
    <string name="permission">Permission</string>
    <string name="hint_email">Email</string>
    <string name="add_address">Add address</string>
    <string name="empty_alert">%1$s cannot be empty.</string>
    <string name="address_one">Address One</string>
    <string name="address_two">Address Two</string>
    <string name="acc_info">Account info</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirmation_school_admin">I here by confirm that the information provided by me is true.</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_login">Login</string>
    <string name="log_in_instead">Log in instead!!</string>
    <string name="dont_have_acc">Don\'t have account\?. Create one.</string>
    <string name="please_select_type">Please select user type.</string>
    <string name="please_select_specified">Please select %1$s.</string>
    <string name="medium">Medium</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="password_not_matching">Password does not match.</string>
    <string name="title_activity_expandable_class_example">ExpandableClassExample</string>
    <string name="title_activity_test_new_modules">TestNewModules</string>
    <string name="add_class">Add Class</string>
    <string name="add_section">Add Section</string>
    <string name="add_student">Add Student</string>
    <string name="title_activity_expandable_with_slide">ExpandableWithSlide</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">SB News</string>
    <string name="loading">Loading... Please wait..</string>
</resources>