<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/my_text_color"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="in.ajm.sb.activities.Settings"
    tools:showIn="@layout/activity_settings">

    <Button
        android:id="@+id/button_select_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="?android:actionBarSize"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/select_theme"
        android:theme="@style/AppTheme.Button" />

    <in.ajm.sb.customviews.TextViewBold
        android:id="@+id/tv_selected_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="?attr/colorAccent"
        android:padding="10dp"
        android:text="@string/selected_theme"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_select_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/select_language"
        android:theme="@style/AppTheme.Button" />

    <in.ajm.sb.customviews.TextViewBold
        android:id="@+id/tv_selected_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="?attr/colorAccent"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/selected_language"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_switch_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/switch_user"
        android:theme="@style/AppTheme.Button" />

    <in.ajm.sb.customviews.TextViewBold
        android:id="@+id/tv_current_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="?attr/colorAccent"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/current_user"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_test_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/test"
        android:theme="@style/AppTheme.Button" />

</LinearLayout>
