<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="10dp"
    android:background="?attr/my_text_color"
    android:layout_height="wrap_content">

    <in.ajm.sb.customviews.TextViewBold
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="16dp"
        android:gravity="center"
        android:text="@string/add_class"/>

    <in.ajm.sb.customviews.EditTextRegular
        android:id="@+id/et_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/classname"
        android:layout_marginTop="20dp"
        android:padding="5dp" />

    <in.ajm.sb.customviews.ButtonMedium
        android:id="@+id/button_submit"
        android:theme="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/submit" />


</LinearLayout>