<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:selectableItemBackground"
    android:orientation="horizontal"
    android:padding="8dp">

    <in.ajm.sb.customviews.TextViewBold
        android:id="@+id/tv_student_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:paddingLeft="5dp"
        android:gravity="center_vertical|left"
        android:text="@string/name" />

    <in.ajm.sb.customviews.TextViewBold
        android:id="@+id/tv_total_marks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:paddingLeft="5dp"
        android:gravity="center"
        android:text="@string/m_marks" />

    <in.ajm.sb.customviews.TextViewBold
        android:id="@+id/tv_result_marks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:paddingLeft="5dp"
        android:gravity="center"
        android:text="@string/result" />

</LinearLayout>